# Mohs_Hardness_Inference

./: README.md  pyproject.toml
Model_Inference/models/: Mohs_Inference.csv
Model_Inference/src/: main.py
Model_Inference/src/data/: data_processor.py  inference.py
Model_Training/models/: xgboost_model.joblib
Model_Training/src/: main.py
Model_Training/src/data/: data_loader.py  data_processor.py  data_splitter.py
Model_Training/src/model/: evaluator.py  saver.py  trainer.py
