[project]
name = "andrea-echague-mohs-hardness"
version = "0.1.0"
description = "Training and inference for Mohs hardness dataset"
authors = [
    {name = "Andrea Echague Morel",email = "andreamechaguem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xgboost (>=2.1.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
